fix(home): tighten scholar icon spacing

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -394,11 +394,6 @@ header ul {
 	mask-size: contain;
 }
 
-.me-link__icon--scholar {
-	width: 1.1em;
-	height: 1.1em;
-}
-
 .posts li time,
 .posts li .list-note,
 .projects li time {
